--- a/Frontend/user/style.css
+++ b/Frontend/user/style.css
@@ -2,6 +2,7 @@
     font-family: bai;
     src: url(fonts/bai/baijamjuree/BaiJamjuree-Regular.ttf);
 }
+
 * {
     font-family: "bai";
     margin: 0;
@@ -9,11 +10,13 @@
     box-sizing: border-box;
     color: white;
 }
+
 body {
     background-color: rgb(20, 69, 125);
 }
+
 body main nav {
-    padding: 20px;
+    padding: 40px;
     background-color: rgb(13, 40, 64);
     display: flex;
     justify-content: space-between;
@@ -21,28 +24,34 @@ body main nav {
     font-size: 40px;
     border-bottom: 4px solid rgb(255, 231, 33);
 }
+
 a {
     text-decoration: none;
 }
-#menu1 {
+
+#menuLeft {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 30px;
 }
-#menu2 {
+
+#menuRight {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 30px;
 }
-#menu2 div a:hover {
+
+#menuRight div a:hover {
     color: rgb(255, 231, 33);
     border-bottom: 4px solid rgb(255, 231, 33);
 }
+
 body main nav img {
     width: 100px;
 }
+
 header {
     display: flex;
     justify-content: space-between;
@@ -50,41 +59,118 @@ header {
     width: 100%;
     height: auto;
 }
-#head1 {
-    padding: 50px;
+
+#headerLeft {
+    width: 40%;
+    padding: 40px;
 }
+
 #head2 {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     gap: 40px;
     margin-bottom: 40px;
+}
+#head3 {
+    width: 100%;
+}
+#head3 img {
+    width: 100%;
 }
 #head4 {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 25px;
-}
-#head3{
     width: 100%;
 }
+
 #head4 h1 {
     color: rgb(255, 231, 33);
 }
+
 #head5 {
     font-size: 25px;
 }
-video {
+
+#headerRight video {
     height: 100%;
-}
-#vid {
-    border-left: 4px solid rgb(255, 231, 33);
-    object-fit: fill;
+    object-fit: cover;
     width: 100%;
 }
-#history{
+
+#headerRight {
+    border-left: 4px solid rgb(255, 231, 33);
+    object-fit: fill;
+    width: 60%;
+}
+
+#history {
     background-color: rgb(13, 40, 64);
     border-bottom: 4px solid rgb(255, 231, 33);
     display: flex;
     justify-content: space-between;
+}
+
+#historyLeft {
+    width: 20%;
+    padding-top: 40px;
+    padding-left: 40px;
+    padding-bottom: 40px;
+}
+#historyLeft img {
+    width: 100%;
+    border: 4px solid rgb(255, 231, 33);
+}
+#historyRight{
+    padding: 40px;
+    width: 80%;
+}
+#hsection {
+    display: flex;
+    justify-content: center;
+
+}
+#hleft{
+    padding-right: 40px;
+    width: 60%;
+}
+#hleft p{
+    font-size: 25px;
+}
+#hright{
+    width: 40%;
+}
+#hright p{
+    font-size: 25px;
+}
+#hright h2{
+    color: rgb(255, 231, 33);
+}
+#htop{
+    padding-bottom: 40px;
+}
+#htop h1{
+    margin-bottom: 40px;
+    font-size: 40px;
+    border-bottom: 4px solid rgb(255, 231, 33);
+}
+#htop h2{
+    font-size: 30px;
+}
+
+@media screen and (max-width: 1400px) {
+    #head2 {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        gap: 40px;
+        margin-bottom: 40px;
+    }
+    #head3{
+        display: flex;
+        justify-content: center;
+    }
+}
+@media screen and (max-width: 1000px) {
 }
