--- a/Frontend/user/style.css
+++ b/Frontend/user/style.css
@@ -40,7 +40,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: 40px;
 }
 
 #menuRight div a:hover {
@@ -97,6 +97,7 @@ header {
     height: 100%;
     object-fit: cover;
     width: 100%;
+    user-select: none;
 }
 
 #headerRight {
@@ -118,48 +119,210 @@ header {
     padding-left: 40px;
     padding-bottom: 40px;
 }
+#historyLeft h2 {
+    text-align: center;
+    border-bottom: 4px solid rgb(255, 231, 33);
+}
 #historyLeft img {
     width: 100%;
     border: 4px solid rgb(255, 231, 33);
 }
-#historyRight{
+#historyRight {
     padding: 40px;
     width: 80%;
 }
 #hsection {
     display: flex;
     justify-content: center;
-
 }
-#hleft{
+#hleft {
     padding-right: 40px;
     width: 60%;
 }
-#hleft p{
+#hleft p {
     font-size: 25px;
 }
-#hright{
+#hright {
     width: 40%;
 }
-#hright p{
+#hright p {
     font-size: 25px;
 }
-#hright h2{
+#hright h2 {
     color: rgb(255, 231, 33);
 }
-#htop{
+#htop {
     padding-bottom: 40px;
 }
-#htop h1{
+#htop h1 {
     margin-bottom: 40px;
     font-size: 40px;
     border-bottom: 4px solid rgb(255, 231, 33);
+    text-align: center;
 }
-#htop h2{
+#htop h2 {
     font-size: 30px;
 }
-
-@media screen and (max-width: 1400px) {
+#mayor {
+    float: right;
+}
+#transport {
+    padding: 40px;
+    border-bottom: 4px solid rgb(255, 231, 33);
+    width: 100%;
+}
+#transportTitle {
+    text-align: center;
+    font-size: 40px;
+    border-bottom: 4px solid rgb(255, 231, 33);
+}
+#cards {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+}
+.card {
+    width: 100%;
+    border: 4px solid rgb(255, 231, 33);
+    background-color: rgb(13, 40, 64);
+    text-align: center;
+}
+.card h1 {
+    padding: 40px;
+    font-size: 25px;
+}
+.card p {
+    padding: 40px;
+    text-align: left;
+    font-size: 25px;
+}
+.cardimg {
+    width: 100%;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+.card img {
+    width: 100%;
+    border: 4px solid rgb(255, 231, 33);
+}
+#districts {
+    padding: 40px;
+    border-bottom: 4px solid rgb(255, 231, 33);
+}
+#districtsTitle {
+    text-align: center;
+    font-size: 40px;
+    border-bottom: 4px solid rgb(255, 231, 33);
+}
+#descriptions{
+    width: 100%;
+}
+.areas {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-top: 40px;
+}
+#cent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("images/center.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 400px;
+    border: 4px solid rgb(255, 231, 33);
+}
+#wats {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("images/watson.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 400px;
+    border: 4px solid rgb(255, 231, 33);
+}
+#hey {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("images/heywood.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 400px;
+    border: 4px solid rgb(255, 231, 33);
+}
+#west {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("images/west.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 400px;
+    border: 4px solid rgb(255, 231, 33);
+}
+#santo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("images/santo.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 400px;
+    border: 4px solid rgb(255, 231, 33);
+}
+#pacific {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("images/pacifica.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 400px;
+    border: 4px solid rgb(255, 231, 33);
+}
+#out {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("images/out.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 400px;
+    border: 4px solid rgb(255, 231, 33);
+}
+#dog {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("images/dog.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 400px;
+    border: 4px solid rgb(255, 231, 33);
+}
+@media screen and (max-width: 1500px) {
     #head2 {
         display: flex;
         justify-content: center;
@@ -167,7 +330,7 @@ header {
         gap: 40px;
         margin-bottom: 40px;
     }
-    #head3{
+    #head3 {
         display: flex;
         justify-content: center;
     }
