--- a/Frontend/user/style.css
+++ b/Frontend/user/style.css
@@ -118,6 +118,10 @@ header {
     padding-top: 40px;
     padding-left: 40px;
     padding-bottom: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 #historyLeft h2 {
     text-align: center;
@@ -209,6 +213,7 @@ header {
     border: 4px solid rgb(255, 231, 33);
 }
 #districts {
+    background-color: rgb(13, 40, 64);
     padding: 40px;
     border-bottom: 4px solid rgb(255, 231, 33);
 }
