--- a/Frontend/user/style.css
+++ b/Frontend/user/style.css
@@ -16,7 +16,8 @@ body {
 }
 
 body main nav {
-    padding: 40px;
+    display: flex;
+    padding: 20px;
     background-color: rgb(13, 40, 64);
     display: flex;
     justify-content: space-between;
@@ -40,12 +41,16 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 40px;
+    gap: 30px;
 }
 
 #menuRight div a:hover {
     color: rgb(255, 231, 33);
     border-bottom: 4px solid rgb(255, 231, 33);
+}
+
+#start a{
+    color: rgb(255, 231, 33);
 }
 
 body main nav img {
@@ -57,7 +62,6 @@ header {
     justify-content: space-between;
     border-bottom: 4px solid rgb(255, 231, 33);
     width: 100%;
-    height: auto;
 }
 
 #headerLeft {
@@ -109,30 +113,33 @@ header {
 #history {
     background-color: rgb(13, 40, 64);
     border-bottom: 4px solid rgb(255, 231, 33);
+    padding: 40px;
+}
+#history_content {
     display: flex;
     justify-content: space-between;
 }
-
-#historyLeft {
+#history_left {
     width: 20%;
-    padding-top: 40px;
-    padding-left: 40px;
-    padding-bottom: 40px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
     flex-direction: column;
+    padding-right: 40px;
 }
-#historyLeft h2 {
+#history_left h2 {
     text-align: center;
     border-bottom: 4px solid rgb(255, 231, 33);
+    width: 100%;
 }
-#historyLeft img {
+#history_left img {
     width: 100%;
     border: 4px solid rgb(255, 231, 33);
 }
-#historyRight {
-    padding: 40px;
+#history_right {
+    display: flex;
+    justify-content: space-between;
     width: 80%;
 }
 #hsection {
@@ -141,13 +148,13 @@ header {
 }
 #hleft {
     padding-right: 40px;
-    width: 60%;
+    width: 100%;
 }
 #hleft p {
     font-size: 25px;
 }
 #hright {
-    width: 40%;
+    width: 100%;
 }
 #hright p {
     font-size: 25px;
@@ -158,13 +165,16 @@ header {
 #htop {
     padding-bottom: 40px;
 }
-#htop h1 {
+#history_title {
+    padding-bottom: 40px;
+}
+#history_title h1 {
     margin-bottom: 40px;
     font-size: 40px;
     border-bottom: 4px solid rgb(255, 231, 33);
     text-align: center;
 }
-#htop h2 {
+#history_title h2 {
     font-size: 30px;
 }
 #mayor {
@@ -222,7 +232,7 @@ header {
     font-size: 40px;
     border-bottom: 4px solid rgb(255, 231, 33);
 }
-#descriptions{
+#descriptions {
     width: 100%;
 }
 .areas {
@@ -339,6 +349,79 @@ header {
         display: flex;
         justify-content: center;
     }
+    #history_left {
+        width: 30%;
+    }
+    #history_right {
+        width: 70%;
+    }
+    #hleft {
+        width: 65%;
+    }
+    #hright {
+        width: 35%;
+    }
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1200px) {
+    header {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    #head3 img {
+        width: 250px;
+    }
+    #headerLeft {
+        width: 100%;
+    }
+    #headerRight {
+        width: 100%;
+        border-left: 0;
+    }
+    #headerRight video {
+        object-fit: cover;
+        width: 100%;
+        user-select: none;
+        border-bottom: 4px solid rgb(255, 231, 33);
+    }
+    #history {
+        width: 100%;
+    }
+    #history_content {
+        display: flex;
+        flex-direction: column;
+    }
+    #history_left {
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        align-content: flex-start;
+        flex-direction: column;
+        padding-right: 0;
+        padding-bottom: 40px;
+    }
+    #history_right {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 0;
+    }
+    #hleft {
+        padding-right: 0;
+        padding-bottom: 40px;
+        width: 100%;
+    }
+    #hright {
+        width: 100%;
+    }
+    #cards {
+        display: flex;
+        flex-direction: column;
+    }
+    .areas {
+        display: flex;
+        flex-direction: column;
+    }
 }
