--- a/Frontend/user/style.css
+++ b/Frontend/user/style.css
@@ -252,6 +252,20 @@ header {
     width: 100%;
     height: 400px;
     border: 4px solid rgb(255, 231, 33);
+    font-size: 40px;
+    font-weight: bold;
+}
+.areas button {
+    background-color: transparent;
+    border: none;
+    font-size: 30px;
+    padding: 10px;
+    font-weight: bold;
+}
+.areas button:hover {
+    background-color: rgb(255, 231, 33);
+    cursor: pointer;
+    color: black;
 }
 #wats {
     display: flex;
@@ -264,6 +278,8 @@ header {
     width: 100%;
     height: 400px;
     border: 4px solid rgb(255, 231, 33);
+    font-size: 40px;
+    font-weight: bold;
 }
 #hey {
     display: flex;
@@ -276,6 +292,8 @@ header {
     width: 100%;
     height: 400px;
     border: 4px solid rgb(255, 231, 33);
+    font-size: 40px;
+    font-weight: bold;
 }
 #west {
     display: flex;
@@ -288,6 +306,8 @@ header {
     width: 100%;
     height: 400px;
     border: 4px solid rgb(255, 231, 33);
+    font-size: 40px;
+    font-weight: bold;
 }
 #santo {
     display: flex;
@@ -300,6 +320,8 @@ header {
     width: 100%;
     height: 400px;
     border: 4px solid rgb(255, 231, 33);
+    font-size: 40px;
+    font-weight: bold;
 }
 #pacific {
     display: flex;
@@ -312,6 +334,8 @@ header {
     width: 100%;
     height: 400px;
     border: 4px solid rgb(255, 231, 33);
+    font-size: 40px;
+    font-weight: bold;
 }
 #out {
     display: flex;
@@ -324,6 +348,8 @@ header {
     width: 100%;
     height: 400px;
     border: 4px solid rgb(255, 231, 33);
+    font-size: 40px;
+    font-weight: bold;
 }
 #dog {
     display: flex;
@@ -336,6 +362,8 @@ header {
     width: 100%;
     height: 400px;
     border: 4px solid rgb(255, 231, 33);
+    font-size: 40px;
+    font-weight: bold;
 }
 @media screen and (max-width: 1500px) {
     #head2 {
