--- a/Frontend/user/map.css
+++ b/Frontend/user/map.css
@@ -9,6 +9,7 @@
     padding: 0;
     box-sizing: border-box;
     color: white;
+    user-select: none;
 }
 
 nav {
@@ -32,23 +33,23 @@ a {
 
 #menuLeft {
     display: flex;
-    justify-content: center;
     align-items: center;
     gap: 30px;
+}
+#menuLeft div {
+    display: flex;
+    align-items: center;
 }
 
 #menuRight {
     display: flex;
-    justify-content: center;
     align-items: center;
     gap: 30px;
 }
 
 #menuRight div a:hover {
-    color: rgb(255, 231, 33);
     border-bottom: 4px solid rgb(255, 231, 33);
 }
-
 
 .topnav {
     overflow: hidden;
@@ -62,19 +63,9 @@ a {
     display: none;
 }
 
-#plan a {
+#plan {
     color: rgb(255, 231, 33);
 }
-
-
-
-
-
-
-
-
-
-
 
 #map img {
     width: 100%;
@@ -84,7 +75,40 @@ a {
     padding: 20px;
     background-color: rgb(13, 40, 64);
     position: absolute;
-    top: 14%;
+    top: 500px;
     left: 2%;
     border: 4px solid rgb(255, 231, 33);
+}
+
+@media screen and (max-width: 1200px) {
+    #hamburger {
+        display: block;
+    }
+    #menuRight {
+        display: none;
+    }
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
+    .topnav.responsive {
+        display: flex;
+        flex-direction: column;
+    }
+    .topnav.responsive #menuLeft {
+        padding-bottom: 20px;
+    }
+    .topnav.responsive #menuRight {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        border-top: 4px solid rgb(255, 231, 33);
+        padding-top: 20px;
+        gap: 10px;
+    }
+
+    .topnav.responsive #hamburger {
+        position: absolute;
+        right: 20px;
+    }
 }
