--- a/Frontend/user/style.css
+++ b/Frontend/user/style.css
@@ -9,6 +9,7 @@
     padding: 0;
     box-sizing: border-box;
     color: white;
+    user-select: none;
 }
 
 body {
@@ -32,24 +33,25 @@ a {
 
 #menuLeft {
     display: flex;
-    justify-content: center;
     align-items: center;
     gap: 30px;
+}
+#menuLeft div{
+    display: flex;
+    align-items: center;
 }
 
 #menuRight {
     display: flex;
-    justify-content: center;
     align-items: center;
     gap: 30px;
 }
 
 #menuRight div a:hover {
-    color: rgb(255, 231, 33);
     border-bottom: 4px solid rgb(255, 231, 33);
 }
 
-#start a {
+#start {
     color: rgb(255, 231, 33);
 }
 
@@ -467,7 +469,6 @@ header {
 }
 
 @media screen and (max-width: 1200px) {
-    
     #hamburger {
         display: block;
     }
@@ -478,10 +479,24 @@ header {
         float: right;
         display: block;
     }
-    .topnav.responsive{
-        height: 200px;
+    .topnav.responsive {
+        display: flex;
+        flex-direction: column;
     }
-    .topnav.responsive #menuRight{
-        display: block;
+    .topnav.responsive #menuLeft {
+        padding-bottom: 20px;
+    }
+    .topnav.responsive #menuRight {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        border-top: 4px solid rgb(255, 231, 33);
+        padding-top: 20px;
+        gap: 10px;
+    }
+
+    .topnav.responsive #hamburger {
+        position: absolute;
+        right: 20px;
     }
 }
