--- a/Frontend/user/map.css
+++ b/Frontend/user/map.css
@@ -8,7 +8,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: white;
+    color: black;
     user-select: none;
 }
 
@@ -77,6 +77,17 @@ a {
     position: absolute;
     top: 500px;
     left: 2%;
+    border: 4px solid rgb(255, 231, 33);
+}
+
+table{
+    border: 4px solid rgb(255, 231, 33);
+}
+
+th{
+    border: 4px solid rgb(255, 231, 33);
+}
+td{
     border: 4px solid rgb(255, 231, 33);
 }
 
