--- a/Frontend/user/map.css
+++ b/Frontend/user/map.css
@@ -135,7 +135,23 @@ td {
 
 #map img {
     width: 100%;
+    /* position: absolute; */
     border-bottom: 4px solid rgb(255, 231, 33); /* Jobb oldali szegély */
+}
+
+#map svg {
+    width: 100%; 
+     height: 2666px;
+     position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 23;
+}
+
+#vonalrajz{
+    width: 100%; 
+     height: 2666px;
+    z-index: 24;
 }
 
 #jarat {
