--- a/Frontend/user/map.css
+++ b/Frontend/user/map.css
@@ -18,9 +18,11 @@ nav {
     padding: 20px;
     background-color: rgb(13, 40, 64);
     justify-content: space-between;
-    width: 100%;
+    width: 100vw; /* Teljes szélesség */
     font-size: 40px;
     border-bottom: 4px solid rgb(255, 231, 33);
+    position: relative; /* hozzá kell adni, hogy a z-index működjön */
+    z-index: 25; /* emeld a z-index-et */
 }
 
 nav img {
@@ -47,10 +49,6 @@ a {
     gap: 30px;
 }
 
-#menuRight div a:hover {
-    border-bottom: 4px solid rgb(255, 231, 33);
-}
-
 .topnav {
     overflow: hidden;
 }
@@ -75,34 +73,31 @@ a {
 }
 
 #panel {
+    position: absolute;
     font-size: 20px;
     padding: 20px;
-    padding-left: 50px;
     background-color: rgb(13, 40, 64);
-    position: absolute;
-    top: 90px;
-    width: 540px; /* Panel szélessége */
-    transition: left 0.5s ease; /* Animáció a bal oldalra elrejtéshez és megjelenítéshez */
-    border-right: 4px solid rgb(255, 231, 33); /* Jobb oldali szegély */
+    top: 90px; /* Módosítás: panel tetejére helyezése */
+    width: 100vw; /* Panel szélessége teljes képernyő szélesség */
     border-bottom: 4px solid rgb(255, 231, 33); /* Jobb oldali szegély */
-    border-top: 4px solid rgb(255, 231, 33); /* Jobb oldali szegély */
+    transform: translateY(-100%); /* Módosítás: panel felfelé elrejtése */
+    z-index: 0; /* állítsd kisebbre, hogy a navigációs sáv mögé kerüljön */
+    transition: transform 0.3s ease; /* Animáció hozzáadása a transform tulajdonsághoz */
 }
 
 #togglePanelButton {
-    position: absolute;
-    top: 50%;
-    left: 0;
     transform: translateY(-50%);
     background-color: transparent;
     border: none;
     cursor: pointer;
     padding: 0;
     z-index: 1; /* Felül az ikonra */
-    top: 320px;
+    transition: transform 0.3s ease; /* Animáció hozzáadása a transform tulajdonsághoz */
 }
 
 #togglePanelButton i {
     font-size: 32px;
+    width: 100px;
     color: rgb(255, 231, 33);
 }
 
@@ -125,32 +120,30 @@ td {
     text-align: center;
 }
 #map {
+    position: absolute;
     width: 2000px; /* A térképnek teljes szélességet kell kapnia */
     margin-left: 0; /* A térkép margóját 0-ra állítjuk */
-    background-color: rgb(13, 40, 64);#map {
-        overflow: hidden;
-    }
-    
+    background-color: rgb(13, 40, 64);
+    overflow: hidden;
 }
 
 #map img {
     width: 100%;
-    /* position: absolute; */
     border-bottom: 4px solid rgb(255, 231, 33); /* Jobb oldali szegély */
 }
 
 #map svg {
-    width: 100%; 
-     height: 2666px;
-     position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 23;
+    width: 100%;
+    height: 2666px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 23;
 }
 
-#vonalrajz{
-    width: 100%; 
-     height: 2666px;
+#vonalrajz {
+    width: 100%;
+    height: 2666px;
     z-index: 24;
 }
 
@@ -190,4 +183,13 @@ td {
         position: absolute;
         right: 20px;
     }
+    #panel.responsive {
+        top: 248px; /* A panel felfelé mozgatása a hamburger menü megjelenítésekor */
+    }
+}
+
+#menuRight div a:hover {
+    text-decoration: underline;
+    text-decoration-color: rgb(255, 231, 33);
+    text-decoration-thickness: 4px;
 }
