--- a/Frontend/admin/src/App.css
+++ b/Frontend/admin/src/App.css
@@ -4,3 +4,16 @@
 .form-check{
   text-align: left;
 }
+
+@keyframes shake {
+  0% { transform: translateX(0); }
+  20% { transform: translateX(-15px); }
+  40% { transform: translateX(15px); }
+  60% { transform: translateX(-15px); }
+  80% { transform: translateX(15px); }
+  100% { transform: translateX(0); }
+}
+
+.shake {
+  animation: shake 0.5s linear;
+}
