--- a/Frontend/user/style.css
+++ b/Frontend/user/style.css
@@ -36,7 +36,7 @@ a {
     align-items: center;
     gap: 30px;
 }
-#menuLeft div{
+#menuLeft div {
     display: flex;
     align-items: center;
 }
@@ -267,10 +267,11 @@ header {
     font-weight: bold;
 }
 .areas button:hover {
-    background-color: rgb(255, 231, 33);
+    background-color: rgba(255, 233, 33, 0.5);
+    border: 4px solid rgb(255, 231, 33);
     cursor: pointer;
-    color: black;
 }
+
 #wats {
     display: flex;
     justify-content: center;
@@ -501,4 +502,137 @@ header {
         position: absolute;
         right: 20px;
     }
+}
+
+.mySlides {
+    display: none;
+}
+img {
+    vertical-align: middle;
+}
+
+.slider {
+    width: 100%;
+    position: relative;
+    margin: auto;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: white;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+    background-color: rgb(255, 231, 33);
+}
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: 0.4;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+#summary {
+    margin-top: 40px;
+    font-size: 25px;
+}
+
+#info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 20px;
+}
+
+#desTop {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+.sumTitle {
+    margin-bottom: 20px;
+    color: rgb(255, 231, 33);
+    font-size: 40px;
+}
+#desBottom {
+    border: 4px solid rgb(255, 231, 33);
+    padding: 20px;
+}
+#description {
+    width: 100%;
+    height: 500px;
+    overflow: auto;
+}
+#dangTitle {
+    margin-bottom: 20px;
+    color: rgb(255, 231, 33);
+    font-size: 30px;
+}
+.mySlides img {
+    border: 4px solid rgb(255, 231, 33);
+}
+#summary > div {
+    display: none;
+}
+footer{
+    background-color: black;
+    margin: auto;
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+footer img{
+    width: 50%;
 }
